Added tf.record queues and imported semantic segmentation preprocessor

--- a/.gitignore
+++ b/.gitignore
@@ -2,6 +2,10 @@
 /data/mitade/*
 !/data/coco/.gitkeep
 !/data/mitade/.gitkeep
+/data/ade20k/*
+download_and_convert_data.py
+download_and_convert_ade20k.py
+/logs
 
 # Byte-compiled / optimized / DLL files
 __pycache__/
